5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1103.log
== TEST (2019-04-28 10:20:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print("Valor total: R$",round(y,2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:20:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print("Valor total: R$",round(y,2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:23:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:23:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.186045
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:23:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:24:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:24:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:26:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif:
	print(x,"nao pertence ao intervalo",a,",",b)

-- ERROR:
File "XXXX", line 10
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:29:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>a>b or a>b>x or b>a>x)
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- ERROR:
File "XXXX", line 10
    elif(x>b>a or x>a>b or a>b>x or b>a>x)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>a>b or a>b>x or b>a>x):
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:29:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>a>b or a>b>x or b>a>x):
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- EXECUTION TIME:
0.12992
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:30:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>a>b or a>b>x or b>a>x):
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:31:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>b>a or b>a>x):
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- EXECUTION TIME:
0.136505
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:31:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("qual seu numero x"))
a= float(input("qual seu numero a:"))
b= float(input("qual seu numero b"))

if(a<x<b or b<x<a):
	print(x,"pertence ao intervalo",a,",",b)
elif(x>b>a or x>b>a or b>a>x):
	print(x,"nao pertence ao intervalo",a,",",b)
elif(b<=a):
	print("Entradas",a,"e",b,"invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:34:35) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))
if (b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif (a<=x<=b):
	print(x, "pertence ao intervalo", a,",", b)
else:
	print(x, "nao pertence ao intervalo", a,",", b)
-- EXECUTION TIME:
0.160906
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
